--- a/resources/private/admin/organization.html
+++ b/resources/private/admin/organization.html
@@ -59,6 +59,25 @@
 
           <button data-bind="visible: !openInfoRequests(), click: convertOpenInforequests" class="btn positive">Muuta avoimet neuvontapyynn&ouml;t tavallisiksi</button>
 
+          <div>
+            <h2>Autologin IP-osoitteet</h2>
+            <table>
+              <thead>
+                <tr>
+                  <th>Valitse</th>
+                  <th>IP</th>
+                  <th>Kommentti</th>                
+                </tr>
+              </thead>
+              <tbody data-bind="foreach: $data.ssoKeys">
+                <tr>
+                  <td><input type="checkbox" data-bind="checked: $data.selected, attr: {'data-test-id': 'org-sso-selected-' + $data.id()}" class="form-input"></td>
+                  <td><span data-bind="text: $data.ip, attr: {'data-test-id': 'org-sso-ip-' + $data.id()}" class="form-input"></td>
+                  <td><span data-bind="text: $data.comment, attr: {'data-test-id': 'org-sso-comment-' + $data.id()}" class="form-input"></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </section>
