--- a/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
+++ b/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
@@ -107,7 +107,12 @@
                            params: {lhtml: 'help.' + application.permitType() + '.neighborsDesc'}
                            }"></span>
 
-          <div data-bind="template: {name: 'neighbors-table-template', data: {neighbors: application.neighbors, optionMunicipalityHearsNeighbors: application.optionMunicipalityHearsNeighbors, optionMunicipalityHearsNeighborsDisabled: application.optionMunicipalityHearsNeighborsDisabled, localisationKeys: {missing: 'neighbors.missing'}}}"></div>
+          <div data-bind="template: {name: 'neighbors-table-template',
+                                     data: {neighbors: application.neighbors,
+                                            optionMunicipalityHearsNeighbors: application.optionMunicipalityHearsNeighbors,
+                                            optionMunicipalityHearsNeighborsDisabled: application.optionMunicipalityHearsNeighborsDisabled,
+                                            municipalityHearsNeighborsVisible: application.municipalityHearsNeighborsVisible,
+                                            localisationKeys: {missing: 'neighbors.missing'}}}"></div>
           <button data-bind="click: openNeighborsPage,
                              visible: $root.authorization.ok('neighbor-add')"
                   class="btn btn-primary modal"
@@ -124,10 +129,14 @@
         <p data-bind="ltext: $data.localisationKeys.missing" data-test-id="application-no-neigbors"></p>
       </div>
 
-      <!-- ko if: features.enabled("kunta-kuulee-naapurit") -->
-      <div class="form-grid form-grid--no-border feature">
+      <!-- ko if: municipalityHearsNeighborsVisible -->
+      <div class="form-grid form-grid--no-border">
         <div class="row">
-          <div data-bind="component: {name: 'checkbox-field', params: {value: optionMunicipalityHearsNeighbors, lLabel: 'application.municipality-hears-neighbors', disable: optionMunicipalityHearsNeighborsDisabled}}" ></div>
+          <div data-bind="component: {name: 'checkbox-field',
+                                      params: {value: optionMunicipalityHearsNeighbors,
+                                               lLabel: 'application.municipality-hears-neighbors',
+                                               disable: optionMunicipalityHearsNeighborsDisabled}}"
+               data-test-id="municipality-hears-neighbours" ></div>
         </div>
       </div>
       <!-- /ko -->
