--- a/resources/private/ui-components/statement/statement-edit/statement-reply-request-template.html
+++ b/resources/private/ui-components/statement/statement-edit/statement-reply-request-template.html
@@ -4,7 +4,7 @@
   <section class="page container">
     <script type="text/x-jquery-tmpl" id="statement-reply-request-template">
 
-    <div class="headerarea">
+    <div class="headerarea" data-test-id="header-statement-edit-reply-request">
       <div>
         <h1>
           <span>
