--- a/resources/private/authority-admin/applications-settings.html
+++ b/resources/private/authority-admin/applications-settings.html
@@ -36,6 +36,13 @@
                 <span class="save-indicator" data-bind="saveIndicator: organization.neighborOrderEmailsIndicator, label: false"></span>
               </td>
             </tr>
+            <tr data-test-id="onSubmitEmails-row">
+              <td data-bind="ltext: 'auth-admin.email-notifications.submit'"></td>
+              <td class="value">
+                <input data-test-id="onSubmitEmails" type="text" data-bind="value: organization.submitNotificationEmails, enable: lupapisteApp.models.globalAuthModel.ok('set-organization-submit-notification-email')" />
+                <span class="save-indicator" data-bind="saveIndicator: organization.submitNotificationEmailsIndicator, label: false"></span>
+              </td>
+            </tr>
           </tbody>
         </table>
       </section>
