Added info text for email notifications in admin panel

--- a/resources/private/authority-admin/applications-settings.html
+++ b/resources/private/authority-admin/applications-settings.html
@@ -20,6 +20,7 @@
 
       <section>
         <h2 data-bind="ltext: 'auth-admin.email-notifications'"></h2>
+        <p data-bind="lhtml: 'auth-admin.email-notifications.info'"></p>
 
         <table class="admin-settings">
           <thead>
