--- a/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
+++ b/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
@@ -65,11 +65,17 @@
       <!-- ko if: showIdentifierEditors -->
       <div class="identifier-editors container-bubble" data-bind="event: {keydown: closeEditors}">
         <div class="form-grid form-grid--no-border">
-          <div class="row" data-bind="component: {name: 'operation-editor',
+          <!-- ko if: lupapisteApp.services.accordionService.getIdentifier(docModel.docId) -->
+          <div class="row"
+               data-bind="component: {name: 'document-identifier', params: {docId: docModel.docId}}"></div>
+           <!-- /ko -->
+          <div class="row"
+               data-bind="component: {name: 'operation-editor',
                                       params: {docModel: docModel,
                                                operation: operation,
                                                isPrimary: isPrimaryOperation,
                                                auth: auth}}"></div>
+
         </div>
 
       </div>
