use max-length from schema

--- a/resources/private/ui-components/accordion-toolbar/document-identifiers/document-identifier-template.html
+++ b/resources/private/ui-components/accordion-toolbar/document-identifiers/document-identifier-template.html
@@ -3,5 +3,7 @@
 <input type="text"
        data-bind="textInput: identifier,
                   attr: {'data-test-id': documentId + '-identifier-input',
-                         'id': documentId + '-identifier-input'">
+                         'id': documentId + '-identifier-input',
+                         'readonly': readonly,
+                         'maxlength': inputOptions.maxLength}">
 </script>
