disable field from options or auth

--- a/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
+++ b/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
@@ -67,7 +67,10 @@
         <div class="form-grid form-grid--no-border">
           <!-- ko if: lupapisteApp.services.accordionService.getIdentifier(docModel.docId) -->
           <div class="row"
-               data-bind="component: {name: 'document-identifier', params: {docId: docModel.docId}}"></div>
+               data-bind="component: {name: 'document-identifier',
+                                      params: {docId: docModel.docId,
+                                               authModel: auth,
+                                               options: docModelOptions}}"></div>
            <!-- /ko -->
           <div class="row"
                data-bind="component: {name: 'operation-editor',
