--- a/resources/private/ui-components/accordion-toolbar/document-identifiers/document-identifier-template.html
+++ b/resources/private/ui-components/accordion-toolbar/document-identifiers/document-identifier-template.html
@@ -2,6 +2,7 @@
 <label>Tunnus</label>
 <input type="text"
        data-bind="textInput: identifier,
+                  enable: enabled,
                   attr: {'data-test-id': documentId + '-identifier-input',
                          'id': documentId + '-identifier-input',
                          'readonly': readonly,
