--- a/resources/private/ui-components/accordion-toolbar/operation-editor/operation-editor-template.html
+++ b/resources/private/ui-components/accordion-toolbar/operation-editor/operation-editor-template.html
@@ -3,6 +3,7 @@
     <label class="col-1 is-right" data-bind="ltext: 'document.operation-editor.description', attr: {'id': docId + 'op-description-editor'}"></label>
     <input class="col-1" type="text"
            data-bind="textInput: description,
+                      enable: enabled,
                       attr: {'data-test-id': docModel.testId('op-description-editor-' + docModel.schemaName),
                              'id': docId + '-op-description-editor'}">
     <button class="col-1 secondary"
