added notice text

--- a/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
+++ b/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
@@ -80,7 +80,7 @@
                                                auth: auth}}"></div>
 
         </div>
-
+        <p data-bind="ltext: 'document.operation-identifier.notice'"></p>
       </div>
       <!-- /ko -->
       </div>
