--- a/resources/private/ui-components/accordion-toolbar/document-identifiers/document-identifier-template.html
+++ b/resources/private/ui-components/accordion-toolbar/document-identifiers/document-identifier-template.html
@@ -1,10 +1,13 @@
 <script class="ko-template" type="text/x-jquery-tmpl" id="document-identifier-template">
-<label>Tunnus</label>
-<input type="text"
-       data-bind="textInput: identifier,
-                  enable: enabled,
-                  attr: {'data-test-id': documentId + '-identifier-input',
-                         'id': documentId + '-identifier-input',
-                         'readonly': readonly,
-                         'maxlength': inputOptions.maxLength}">
+<div class="inline-col">
+  <label data-bind="ltext: 'document.operation-identifiers.identifier'"></label>
+  <input class="form-input inline short" type="text"
+         data-bind="textInput: identifier,
+                    enable: enabled,
+                    attr: {'data-test-id': documentId + '-identifier-input',
+                           'id': documentId + '-identifier-input',
+                           'readonly': readonly,
+                           'maxlength': inputOptions.maxLength,
+                           'size': inputOptions.maxLength}">
+</div>
 </script>
