--- a/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
+++ b/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
@@ -11,8 +11,10 @@
         <span class="title"
               data-bind="attr: {'data-app-id': docModel.appId,
                                 'data-doc-id': docModel.docId,
-                                'data-test-id': docModel.schemaName + '-accordion-header-text'},
-                         text: headerText">
+                                'data-test-id': docModel.schemaName + '-accordion-title-text'},
+                         ltext: titleLoc">
+        </span>
+        <span class="description" data-bind="text: headerDescription, attr: {'data-test-id': docModel.schemaName + '-accordion-description-text'}">
         </span>
       </span>
       <span class="icons">
