Show refresh button in statement error dialog if modification conflict occured

--- a/resources/private/ui-components/modal-dialog/dialog/ok-dialog-template.html
+++ b/resources/private/ui-components/modal-dialog/dialog/ok-dialog-template.html
@@ -8,7 +8,7 @@
       </div>
       <div class="button-group ok">
       <div data-bind="component: {name:'ok-button-group',
-                                  params: {okFn: ok}}"></div>
+                                  params: {okFn: ok, okTitle: okTitle}}"></div>
       </div>
     </script>
   </section>
