--- a/resources/private/attachment/attachment.html
+++ b/resources/private/attachment/attachment.html
@@ -95,7 +95,8 @@
                     </tr>
                   </thead>
                   <tbody data-bind="foreach: versions">
-                    <tr style="cursor: pointer;">
+                    <tr style="cursor: pointer;"
+                        data-bind="attr: {'data-test-id': 'version-row-' + version.major + '.' + version.minor}">
                       <td>
                         <a data-bind="text: $data.filename, attr: {href: '/api/raw/download-attachment?attachment-id=' + $data.fileId}"></a>
                       </td>
@@ -107,7 +108,8 @@
                       <td>
                         <a data-bind="click: $root.attachment.deleteVersion,
                                                           ltext: 'remove',
-                                                          visible: $root.authorization.ok('delete-attachment-version') && $parent.editable"></a>
+                                                          visible: $root.authorization.ok('delete-attachment-version') && $parent.editable"
+                           data-test-id="delete-version"></a>
                       </td>
                     </tr>
                   </tbody>
