reduce accordion paths in toolbar model, and format as string to accordion header

--- a/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
+++ b/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
@@ -68,7 +68,7 @@
       <!-- ko if: showIdentifierEditors -->
       <div class="identifier-editors container-bubble" data-bind="event: {keydown: closeEditors}">
         <div>
-          <!-- ko if: identifierField() && features.enabled("document-identifier") -->
+          <!-- ko if: identifierField && features.enabled("document-identifier") -->
           <div class="inline-col identifier-component"
               data-bind="component: {name: 'document-identifier',
                                      params: {docId: docModel.docId,
