remove feature flag from document-identifier

--- a/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
+++ b/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
@@ -68,13 +68,12 @@
       <!-- ko if: showIdentifierEditors -->
       <div class="identifier-editors container-bubble" data-bind="event: {keydown: closeEditors}">
         <div>
-          <!-- ko if: identifierField && features.enabled("document-identifier") -->
+          <!-- ko if: identifierField -->
           <div class="inline-col identifier-component"
               data-bind="component: {name: 'document-identifier',
                                      params: {docId: docModel.docId,
                                               authModel: auth,
-                                              options: docModelOptions}},
-                         css: {feature: features.enabled('document-identifier')}"></div>
+                                              options: docModelOptions}}"></div>
           <!-- /ko -->
           <div class="inline-col identifier-component"
                data-bind="component: {name: 'operation-editor',
