Change email address to user data

--- a/resources/private/change-email/change-email.html
+++ b/resources/private/change-email/change-email.html
@@ -4,11 +4,12 @@
   <section class="page container" id="change-email">
     <div class="container">
       <h1 data-bind="ltext: 'change-email.header'"></h1>
-      <p data-bind="ltext: 'change-email.info'"></p>
+      <p data-bind="ltext: 'change-email.processing', hidden: done"></p>
+      <p data-bind="ltext: 'change-email.done', visible: done"></p>
 
       <span class="error-message register-error" data-bind="ltext: error"></span>
 
-      <a data-bind="attr: {href: '#login'" class="btn btn-primary" data-test-id="login-new-email"><i class="lupicon-log-in"></i><span data-bind="ltext: 'continue'"></span></a>
+      <a href="#login" data-bind="visible: done" class="btn btn-primary" data-test-id="login-new-email"><i class="lupicon-log-in"></i><span data-bind="ltext: 'continue'"></span></a>
 
     </div>
   </section>
