Task state changer fixes.
More targeted handling of observables
(see the fullname binding).

Better defaults for startedBy and closedBy details.

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1251,7 +1251,8 @@
                                                       data-test-id="construction-state-change-info-started"></span>
                                             </span>
                                         </td>
-                                        <td data-bind="fullName: $data.startedBy"></td>
+                                        <td data-bind="fullName: $data.startedBy"
+                                            data-test-id="task-started-by"></td>
                                         <td>
                                             <button class="btn btn-primary"
                                                     data-test-id="application-inform-construction-started-btn"
@@ -1271,7 +1272,8 @@
                                                       data-test-id="construction-state-change-info-closed"></span>
                                             </span>
                                         </td>
-                                        <td data-bind="fullName: $data.closedBy"></td>
+                                        <td data-bind="fullName: $data.closedBy"
+                                            data-test-id="task-closed-by"></td>
                                         <td>
                                             <button class="btn btn-primary"
                                                     data-test-id="application-inform-construction-ready-btn"
