Generalized error message

--- a/resources/private/welcome/company-user.html
+++ b/resources/private/welcome/company-user.html
@@ -12,7 +12,7 @@
 
       <div data-bind="visible: notFound">
         <h2 data-bind="lhtml: 'new-company-user.not-found.title'"></h2>
-        <p data-bind="lhtml: 'new-company-user.not-found.message'"></p>
+        <p data-bind="lhtml: 'error.token-not-found'"></p>
       </div>
 
       <div data-bind="visible: loaded" class="form-group">
