Added localization file

--- a/resources/private/mypage/change-email-template.html
+++ b/resources/private/mypage/change-email-template.html
@@ -13,7 +13,7 @@
                                     params: {value: newEmail,
                                              id: 'newEmail',
                                              disable: disable,
-                                             lLabel: 'userinfo.newEmail'}}"></div>
+                                             lLabel: 'userinfo.new-email'}}"></div>
 
       </div>
       <div class="row">
@@ -25,7 +25,7 @@
                   data-test-id="change-email">
               <i class="lupicon-refresh"></i>
               <i class="wait spin lupicon-refresh"></i>
-              <span data-bind="ltext: 'userinfo.changeEmail'"></span>
+              <span data-bind="ltext: 'userinfo.change-email-submit'"></span>
           </button>
         </div>
       </div>
