--- a/resources/private/mypage/mypage.html
+++ b/resources/private/mypage/mypage.html
@@ -263,7 +263,7 @@
 
     <div id="mypage-change-email"  class="accordion-container">
       <div data-test-id="mypage-change-email-accordion"
-           data-bind="component: {name: 'change-email', params: {ltitle: 'userinfo.changeEmail', data: $data.userinfo, authorization: $data.authorization}}"></div>
+           data-bind="component: {name: 'change-email', params: {ltitle: 'userinfo.change-email', data: $data.userinfo, authorization: $data.authorization}}"></div>
     </div>
 
     <div id="mypage-company" class="accordion-container">
